--- a/react-masterclass/package.json
+++ b/react-masterclass/package.json
@@ -14,6 +14,7 @@
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.17.5",
     "react-query": "^3.39.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
