--- a/react-masterclass/package.json
+++ b/react-masterclass/package.json
@@ -12,6 +12,7 @@
     "apexcharts": "^3.29.0",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.17.5",
