--- a/react-masterclass/package.json
+++ b/react-masterclass/package.json
@@ -50,6 +50,7 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.89",
+    "@types/react-beautiful-dnd": "^13.1.0",
     "@types/react-dom": "^17.0.26",
     "@types/react-helmet": "^6.1.0",
     "@types/react-router-dom": "^5.3.0"
